fix: detail poster on mobile

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -5,6 +5,7 @@
 
   img {
     max-width: 450px;
+    width: 100%;
   }
 
   .info {
